# RaynderCast

./: .gitignore  CMakeLists.txt  README.md  build_and_install  build_debug  shell.nix
.github/workflows/: build-test-apps.yml  cmake-multi-platform.yml
apps/debug_no_install/: CMakeLists.txt
apps/install_release/: test.cpp
apps/noinstall_debug/: CMakeLists.txt  test.cpp
apps/noinstall_release/: CMakeLists.txt
apps/release_install/: CMakeLists.txt
include/raynder/: game.h  grid.h  map.h  math_helpers.h  player.h  raynder.h  renderer.h  types.h
include/raynder/game/: game.h  player.h  renderer.h
src/: game.cpp  map.cpp  map.h  player.cpp  player.h  raycaster.cpp  raycaster.h  raynder.cpp  renderer.cpp  renderer.h
src/game/: game.cpp  player.cpp  renderer.cpp
src/player/: player.cpp  player.h  player_collision.cpp
src/renderer/: renderer.cpp  renderer.h  renderer_hud.cpp
src/renderer/viewport/: viewport.cpp  viewport.h  viewportmanager.h
test_project/: CMakeLists.txt  test.cpp
test_projects/test_project/: CMakeLists.txt  test.cpp
test_projects/test_project_on_system/: CMakeLists.txt  test.cpp
